# vibe-coded

./: CLAUDE.md  README.md
games/: index.html
games/click-trainer/: CLAUDE.md  README.md  click-trainer.html
games/click-trainer/PROMPTS/: README.md  development.md
games/flappybird/: .gitignore  CLAUDE.md  README.md
games/flappybird/PROMPTS/: README.md  TUTORIAL.md  documentation.md  python-development.md  web-conversion.md
games/flappybird/html/: README_WEB.md  game.js  index.html  package-lock.json  package.json  server.js
games/flappybird/python/: pyproject.toml
games/flappybird/python/myflappy/: bird.py  cloud.py  constants.py  ground.py  main.py  myflappy.py  pipes.py
games/piano-kids/: CLAUDE.md  README.md  piano-kids.html
games/piano-kids/PROMPTS/: README.md  development.md
games/sliding-puzzle/: CLAUDE.md  README.md  sliding-puzzle.html
games/sliding-puzzle/PROMPTS/: README.md  development.md
games/tictactoe/: .gitignore  CLAUDE.md  README.md  TicTacToe.cs  TicTacToe.csproj  TicTacToe.sln  phases.md  plan.md  test.cs  tictactoe.py
games/tictactoe/.claude/: settings.local.json
games/tictactoe/PROMPTS/: README.md  development.md
games/tictactoe/html/: tic-tac-toe.html
games/tictactoe/html/PROMPTS/: README.md  development.md
music/win32_happy_birthday/: CMakeLists.txt  README.md  main.c
music/win32_happy_birthday/PROMPTS/: README.md  development.md
productivity/powerpoint-agent/: README.md  agent-pptx.md  hello.md  install-step1.bat  install-step1.ps1  install-step2.bat  install-step2.ps1  marp-pptx.bat  marp-pptx.ps1
(+2 files in other folders)
