[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myflappy"
version = "0.1.0"
description = "A Flappy Bird clone in pygame."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0"
]

[project.scripts]
myflappy = "myflappy.main:main"
